# sqlalchemy_practice

sqlalchemy_practice_ver1/: alembic.ini  database.py  main.py  models.py  myapi.db  myapi.db-journal  popul.py  pyproject.toml  test.db
sqlalchemy_practice_ver1/domain/: actual_query.py  all_router.py
sqlalchemy_practice_ver1/migrations/versions/: 1531e766191c_.py
sqlalchemy_practice_ver2/: alembic.ini  database.py  models.py  myapi.db  pyproject.toml
sqlalchemy_practice_ver2/documents/: SQLAlchemy SQL 1.4 to 2.0.docx
sqlalchemy_practice_ver2/domain/: actual_query.py  all_router.py
sqlalchemy_practice_ver2/migrations/versions/: 73a0c0a72cd0_.py  d91a160c8875_description_of_migration.py  e537d2a62cf7_.py
