[tool.poetry]
name = "sqlalchemy-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "1.4"
alembic = "^1.12.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
